--- a/booking.html
+++ b/booking.html
@@ -73,10 +73,6 @@
         border-color: #555;
       }
 
-      .table-card h3 {
-        margin-bottom: 10px;
-      }
-
       .save-indicator {
         font-size: 12px;
         color: green;
@@ -90,38 +86,24 @@
     <div class="container">
       <!-- SIDEBAR -->
       <aside class="sidebar" id="sidebar">
-        <div class="logo">
-          <span>CONAN DASHBOARD</span>
-        </div>
+        <div class="logo"><span>CONAN DASHBOARD</span></div>
         <nav class="menu">
-          <a href="dashboard.html">
-            <i class="fa-solid fa-gauge"></i>
-            لوحة القيادة
-          </a>
-
-          <a href="notifications.html">
-            <i class="fa-solid fa-bell"></i>
-            التنبيهات
-          </a>
-
-          <a href="analytics.html">
-            <i class="fa-solid fa-rocket"></i>
-            تحليلات
-          </a>
-          <a href="booking.html" class="active">
-            <i class="fa-solid fa-table"></i>
-            جدول الحجوزات
-          </a>
-
-          <a href="AIsettings.html">
-            <i class="fa-solid fa-robot"></i>
-            إعدادات الذكاء الاصطناعي
-          </a>
-
-          <a href="offers.html">
-            <i class="fa-solid fa-gift"></i>
-            إرسال العروض المخصصة
-          </a>
+          <a href="dashboard.html"
+            ><i class="fa-solid fa-gauge"></i>لوحة القيادة</a
+          >
+          <a href="notifications.html"
+            ><i class="fa-solid fa-bell"></i>التنبيهات</a
+          >
+          <a href="analytics.html"><i class="fa-solid fa-rocket"></i>تحليلات</a>
+          <a href="booking.html" class="active"
+            ><i class="fa-solid fa-table"></i>جدول الحجوزات</a
+          >
+          <a href="AIsettings.html"
+            ><i class="fa-solid fa-robot"></i>إعدادات الذكاء الاصطناعي</a
+          >
+          <a href="offers.html"
+            ><i class="fa-solid fa-gift"></i>إرسال العروض المخصصة</a
+          >
         </nav>
       </aside>
 
@@ -143,10 +125,9 @@
 
         <!-- BOOKING TABLE -->
         <section class="dashboard-grid">
-          <div class="table-card" style="width: 100%">
+          <div class="table-card">
             <h3>جدول الحجوزات</h3>
 
-            <!-- STATUS TABS -->
             <div class="status-tabs">
               <button class="status-tab" data-status="all">الكل</button>
               <button class="status-tab" data-status="Contacted">
@@ -202,22 +183,26 @@
       let currentFilter = localStorage.getItem("booking_filter") || "all";
       const q = (s) => document.querySelector(s);
 
-      // Highlight saved tab before data load
-      window.addEventListener("DOMContentLoaded", () => {
-        highlightActiveTab();
-      });
+      // Highlight tab immediately
+      document.addEventListener("DOMContentLoaded", highlightActiveTab);
 
       async function load() {
-        const res = await fetch("/api/bookings");
-        allData = await res.json();
+        try {
+          const res = await fetch("/api/bookings");
+          allData = await res.json();
 
-        allData = allData.map((b) => ({
-          ...b,
-          status: b.status || "Still",
-        }));
+          // Ensure each booking has status
+          allData = allData.map((b) => ({
+            ...b,
+            status: b.status || "Still",
+          }));
 
-        renderTable(allData);
-        highlightActiveTab();
+          // Apply filter after load
+          renderTable(allData);
+          highlightActiveTab();
+        } catch (e) {
+          console.error("Error loading bookings:", e);
+        }
       }
 
       async function updateStatus(id, newStatus) {
@@ -232,23 +217,23 @@
         }
       }
 
-      function renderTable(d) {
+      function renderTable(data) {
         const tb = q("#tbl tbody");
         tb.innerHTML = "";
 
         const filtered =
           currentFilter === "all"
-            ? d
-            : d.filter((b) => b.status === currentFilter);
+            ? data
+            : data.filter((b) => b.status === currentFilter);
 
         if (filtered.length === 0) {
           tb.innerHTML = `<tr><td colspan="6" style="text-align:center;color:#777;">لا توجد بيانات</td></tr>`;
           return;
         }
 
-        filtered.forEach((b, idx) => {
-          const r = document.createElement("tr");
-          r.innerHTML = `
+        filtered.forEach((b, i) => {
+          const row = document.createElement("tr");
+          row.innerHTML = `
             <td>${b.name || "-"}</td>
             <td>${b.phone || "-"}</td>
             <td>${b.service || "-"}</td>
@@ -256,10 +241,10 @@
             <td>${b.time || "-"}</td>
             <td>
               <div style="display:flex;align-items:center;gap:5px;">
-                <span class="save-indicator" id="saved-${idx}">✔</span>
-                <select class="status-dropdown" data-index="${idx}" data-id="${
-            b.id
-          }">
+                <span class="save-indicator" id="saved-${i}">✔</span>
+                <select class="status-dropdown" data-id="${
+                  b.id
+                }" data-index="${i}">
                   <option value="Contacted" ${
                     b.status === "Contacted" ? "selected" : ""
                   }>تم التواصل</option>
@@ -273,28 +258,21 @@
               </div>
             </td>
           `;
-          tb.appendChild(r);
+          tb.appendChild(row);
         });
 
+        // Dropdown change listeners
         document.querySelectorAll(".status-dropdown").forEach((sel) => {
           sel.addEventListener("change", async (e) => {
-            const index = e.target.dataset.index;
             const id = e.target.dataset.id;
             const newStatus = e.target.value;
-
-            allData[index].status = newStatus;
             await updateStatus(id, newStatus);
-
-            const indicator = document.getElementById(`saved-${index}`);
-            indicator.style.display = "inline";
-            setTimeout(() => (indicator.style.display = "none"), 1500);
-
-            renderTable(allData);
+            load(); // refresh data after update
           });
         });
       }
 
-      // ========== TAB LOGIC ==========
+      // Tabs
       function highlightActiveTab() {
         document.querySelectorAll(".status-tab").forEach((btn) => {
           btn.classList.toggle("active", btn.dataset.status === currentFilter);
@@ -310,6 +288,7 @@
         });
       });
 
+      // Sorting
       function sortTable(col) {
         const tb = q("#tbl tbody");
         const rows = Array.from(tb.rows);
@@ -323,37 +302,33 @@
         rows.forEach((r) => tb.appendChild(r));
       }
 
-      // Theme toggle
+      // Theme
       const themeToggle = document.getElementById("themeToggle");
       themeToggle.addEventListener("click", () => {
         document.body.classList.toggle("dark");
         const icon = themeToggle.querySelector("i");
         if (document.body.classList.contains("dark")) {
-          icon.classList.remove("fa-moon");
-          icon.classList.add("fa-sun");
+          icon.classList.replace("fa-moon", "fa-sun");
           localStorage.setItem("clinic_theme", "dark");
         } else {
-          icon.classList.remove("fa-sun");
-          icon.classList.add("fa-moon");
+          icon.classList.replace("fa-sun", "fa-moon");
           localStorage.setItem("clinic_theme", "light");
         }
       });
-
       if (localStorage.getItem("clinic_theme") === "dark") {
         document.body.classList.add("dark");
         const icon = themeToggle.querySelector("i");
-        icon.classList.remove("fa-moon");
-        icon.classList.add("fa-sun");
+        icon.classList.replace("fa-moon", "fa-sun");
       }
 
       // Sidebar toggle
       const menuToggle = document.getElementById("menuToggle");
       const sidebar = document.getElementById("sidebar");
-      menuToggle.addEventListener("click", () => {
-        sidebar.classList.toggle("active");
-      });
+      menuToggle.addEventListener("click", () =>
+        sidebar.classList.toggle("active")
+      );
 
-      // Load bookings and refresh every 15s
+      // Load bookings + auto refresh
       load();
       setInterval(load, 15000);
     </script>
