--- a/booking.html
+++ b/booking.html
@@ -73,6 +73,10 @@
         border-color: #555;
       }
 
+      .table-card h3 {
+        margin-bottom: 10px;
+      }
+
       .save-indicator {
         font-size: 12px;
         color: green;
@@ -86,24 +90,38 @@
     <div class="container">
       <!-- SIDEBAR -->
       <aside class="sidebar" id="sidebar">
-        <div class="logo"><span>CONAN DASHBOARD</span></div>
+        <div class="logo">
+          <span>CONAN DASHBOARD</span>
+        </div>
         <nav class="menu">
-          <a href="dashboard.html"
-            ><i class="fa-solid fa-gauge"></i>لوحة القيادة</a
-          >
-          <a href="notifications.html"
-            ><i class="fa-solid fa-bell"></i>التنبيهات</a
-          >
-          <a href="analytics.html"><i class="fa-solid fa-rocket"></i>تحليلات</a>
-          <a href="booking.html" class="active"
-            ><i class="fa-solid fa-table"></i>جدول الحجوزات</a
-          >
-          <a href="AIsettings.html"
-            ><i class="fa-solid fa-robot"></i>إعدادات الذكاء الاصطناعي</a
-          >
-          <a href="offers.html"
-            ><i class="fa-solid fa-gift"></i>إرسال العروض المخصصة</a
-          >
+          <a href="dashboard.html">
+            <i class="fa-solid fa-gauge"></i>
+            لوحة القيادة
+          </a>
+
+          <a href="notifications.html">
+            <i class="fa-solid fa-bell"></i>
+            التنبيهات
+          </a>
+
+          <a href="analytics.html">
+            <i class="fa-solid fa-rocket"></i>
+            تحليلات
+          </a>
+          <a href="booking.html" class="active">
+            <i class="fa-solid fa-table"></i>
+            جدول الحجوزات
+          </a>
+
+          <a href="AIsettings.html">
+            <i class="fa-solid fa-robot"></i>
+            إعدادات الذكاء الاصطناعي
+          </a>
+
+          <a href="offers.html">
+            <i class="fa-solid fa-gift"></i>
+            إرسال العروض المخصصة
+          </a>
         </nav>
       </aside>
 
@@ -125,9 +143,10 @@
 
         <!-- BOOKING TABLE -->
         <section class="dashboard-grid">
-          <div class="table-card">
+          <div class="table-card" style="width: 100%">
             <h3>جدول الحجوزات</h3>
 
+            <!-- STATUS TABS -->
             <div class="status-tabs">
               <button class="status-tab" data-status="all">الكل</button>
               <button class="status-tab" data-status="Contacted">
@@ -172,7 +191,7 @@
     </div>
 
     <script>
-      // ======= SUPABASE CONFIG =======
+      // ======= SUPABASE LOGIN LOGIC =======
       const SUPABASE_URL = "https://ylsbmxedhycjqaorjkvm.supabase.co";
       const SUPABASE_KEY =
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
@@ -183,26 +202,18 @@
       let currentFilter = localStorage.getItem("booking_filter") || "all";
       const q = (s) => document.querySelector(s);
 
-      // Highlight tab immediately
-      document.addEventListener("DOMContentLoaded", highlightActiveTab);
-
       async function load() {
-        try {
-          const res = await fetch("/api/bookings");
-          allData = await res.json();
+        const res = await fetch("/api/bookings");
+        allData = await res.json();
 
-          // Ensure each booking has status
-          allData = allData.map((b) => ({
-            ...b,
-            status: b.status || "Still",
-          }));
+        // Add default status if missing
+        allData = allData.map((b) => ({
+          ...b,
+          status: b.status || "Still",
+        }));
 
-          // Apply filter after load
-          renderTable(allData);
-          highlightActiveTab();
-        } catch (e) {
-          console.error("Error loading bookings:", e);
-        }
+        renderTable(allData);
+        highlightActiveTab();
       }
 
       async function updateStatus(id, newStatus) {
@@ -211,29 +222,27 @@
             .from("bookings")
             .update({ status: newStatus })
             .eq("id", id);
-          if (error) console.error("Error updating status:", error);
+
+          if (error) {
+            console.error("Error updating status:", error);
+          }
         } catch (e) {
-          console.error("Network error:", e);
+          console.error("Network error updating status:", e);
         }
       }
 
-      function renderTable(data) {
+      function renderTable(d) {
         const tb = q("#tbl tbody");
         tb.innerHTML = "";
 
-        const filtered =
+        let filtered =
           currentFilter === "all"
-            ? data
-            : data.filter((b) => b.status === currentFilter);
+            ? d
+            : d.filter((b) => b.status === currentFilter);
 
-        if (filtered.length === 0) {
-          tb.innerHTML = `<tr><td colspan="6" style="text-align:center;color:#777;">لا توجد بيانات</td></tr>`;
-          return;
-        }
-
-        filtered.forEach((b, i) => {
-          const row = document.createElement("tr");
-          row.innerHTML = `
+        filtered.forEach((b, idx) => {
+          const r = document.createElement("tr");
+          r.innerHTML = `
             <td>${b.name || "-"}</td>
             <td>${b.phone || "-"}</td>
             <td>${b.service || "-"}</td>
@@ -241,10 +250,10 @@
             <td>${b.time || "-"}</td>
             <td>
               <div style="display:flex;align-items:center;gap:5px;">
-                <span class="save-indicator" id="saved-${i}">✔</span>
-                <select class="status-dropdown" data-id="${
-                  b.id
-                }" data-index="${i}">
+                <span class="save-indicator" id="saved-${idx}">✔</span>
+                <select class="status-dropdown" data-index="${idx}" data-id="${
+            b.id
+          }">
                   <option value="Contacted" ${
                     b.status === "Contacted" ? "selected" : ""
                   }>تم التواصل</option>
@@ -258,21 +267,29 @@
               </div>
             </td>
           `;
-          tb.appendChild(row);
+          tb.appendChild(r);
         });
 
-        // Dropdown change listeners
+        // Attach change event
         document.querySelectorAll(".status-dropdown").forEach((sel) => {
           sel.addEventListener("change", async (e) => {
+            const index = e.target.dataset.index;
             const id = e.target.dataset.id;
             const newStatus = e.target.value;
+
+            allData[index].status = newStatus;
             await updateStatus(id, newStatus);
-            load(); // refresh data after update
+
+            const indicator = document.getElementById(`saved-${index}`);
+            indicator.style.display = "inline";
+            setTimeout(() => (indicator.style.display = "none"), 1500);
+
+            renderTable(allData); // refresh table with updated data
           });
         });
       }
 
-      // Tabs
+      // ========== TAB FILTERING ==========
       function highlightActiveTab() {
         document.querySelectorAll(".status-tab").forEach((btn) => {
           btn.classList.toggle("active", btn.dataset.status === currentFilter);
@@ -288,7 +305,6 @@
         });
       });
 
-      // Sorting
       function sortTable(col) {
         const tb = q("#tbl tbody");
         const rows = Array.from(tb.rows);
@@ -302,33 +318,37 @@
         rows.forEach((r) => tb.appendChild(r));
       }
 
-      // Theme
+      // Theme toggle
       const themeToggle = document.getElementById("themeToggle");
-      themeToggle.addEventListener("click", () => {
+      themeToggle.addEventListener("click", function () {
         document.body.classList.toggle("dark");
         const icon = themeToggle.querySelector("i");
         if (document.body.classList.contains("dark")) {
-          icon.classList.replace("fa-moon", "fa-sun");
+          icon.classList.remove("fa-moon");
+          icon.classList.add("fa-sun");
           localStorage.setItem("clinic_theme", "dark");
         } else {
-          icon.classList.replace("fa-sun", "fa-moon");
+          icon.classList.remove("fa-sun");
+          icon.classList.add("fa-moon");
           localStorage.setItem("clinic_theme", "light");
         }
       });
+
       if (localStorage.getItem("clinic_theme") === "dark") {
         document.body.classList.add("dark");
         const icon = themeToggle.querySelector("i");
-        icon.classList.replace("fa-moon", "fa-sun");
+        icon.classList.remove("fa-moon");
+        icon.classList.add("fa-sun");
       }
 
       // Sidebar toggle
       const menuToggle = document.getElementById("menuToggle");
       const sidebar = document.getElementById("sidebar");
-      menuToggle.addEventListener("click", () =>
-        sidebar.classList.toggle("active")
-      );
+      menuToggle.addEventListener("click", () => {
+        sidebar.classList.toggle("active");
+      });
 
-      // Load bookings + auto refresh
+      // Load bookings on page load
       load();
       setInterval(load, 15000);
     </script>
