--- a/booking.html
+++ b/booking.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clinic Dashboard - Booking Table</title>
-    <!-- Favicon -->
     <link rel="icon" type="image/png" href="./img/dummy-conan.jpeg" />
     <link
       rel="stylesheet"
@@ -93,6 +92,7 @@
           </a>
         </nav>
       </aside>
+
       <!-- MAIN CONTENT -->
       <main class="main-content" id="dashboardContent">
         <header class="header">
@@ -108,10 +108,12 @@
             </button>
           </div>
         </header>
+
         <!-- BOOKING TABLE -->
         <section class="dashboard-grid">
           <div class="table-card" style="width: 100%">
             <h3>جدول الحجوزات</h3>
+
             <!-- STATUS FILTER -->
             <div class="status-filter">
               <label for="statusFilter">تصفية حسب الحالة:</label>
@@ -122,6 +124,7 @@
                 <option value="Booking Complete">تم الحجز</option>
               </select>
             </div>
+
             <table id="tbl">
               <thead>
                 <tr>
@@ -147,11 +150,13 @@
             </table>
           </div>
         </section>
+
         <footer>© 2025 Smile Clinic</footer>
       </main>
     </div>
+
     <script>
-      // ======= SUPABASE LOGIN LOGIC =======
+      // ======= SUPABASE INIT =======
       const SUPABASE_URL = "https://ylsbmxedhycjqaorjkvm.supabase.co";
       const SUPABASE_KEY =
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
@@ -161,42 +166,48 @@
       let sortDirection = 1;
       const q = (s) => document.querySelector(s);
 
+      // ======= LOAD BOOKINGS =======
       async function load() {
         const res = await fetch("/api/bookings");
         allData = await res.json();
-        // Add default status if missing
-        allData = allData.map((b) => ({
-          ...b,
-          status: b.status || "Still",
-        }));
+
+        // Normalize status to English keywords
+        allData = allData.map((b) => {
+          let normalizedStatus = b.status;
+          if (!normalizedStatus) normalizedStatus = "Still";
+          if (normalizedStatus === "تم التواصل") normalizedStatus = "Contacted";
+          if (normalizedStatus === "قيد الانتظار") normalizedStatus = "Still";
+          if (normalizedStatus === "تم الحجز")
+            normalizedStatus = "Booking Complete";
+          return { ...b, status: normalizedStatus };
+        });
 
         // Restore saved filter
         const savedFilter = localStorage.getItem("booking_filter");
-        if (savedFilter) {
-          q("#statusFilter").value = savedFilter;
-        }
+        if (savedFilter) q("#statusFilter").value = savedFilter;
 
         applyFilter();
       }
 
+      // ======= UPDATE STATUS =======
       async function updateStatus(id, newStatus) {
         try {
           const { error } = await supabase
             .from("bookings")
             .update({ status: newStatus })
             .eq("id", id);
-          if (error) {
-            console.error("Error updating status:", error);
-          }
+
+          if (error) console.error("Error updating status:", error);
         } catch (e) {
           console.error("Network error updating status:", e);
         }
       }
 
-      function renderTable(d) {
+      // ======= RENDER TABLE =======
+      function renderTable(data) {
         const tb = q("#tbl tbody");
         tb.innerHTML = "";
-        d.forEach((b, idx) => {
+        data.forEach((b) => {
           const r = document.createElement("tr");
           r.innerHTML = `
             <td>${b.name || "-"}</td>
@@ -224,13 +235,11 @@
           tb.appendChild(r);
         });
 
-        // Attach change event
         document.querySelectorAll(".status-dropdown").forEach((sel) => {
           sel.addEventListener("change", async (e) => {
             const id = e.target.dataset.id;
             const newStatus = e.target.value;
 
-            // Find booking by ID and update
             const bookingIndex = allData.findIndex((b) => b.id == id);
             if (bookingIndex !== -1) {
               allData[bookingIndex].status = newStatus;
@@ -238,7 +247,6 @@
 
             await updateStatus(id, newStatus);
 
-            // Show quick save check mark
             const indicator = document.getElementById(`saved-${id}`);
             if (indicator) {
               indicator.style.display = "inline";
@@ -250,6 +258,7 @@
         });
       }
 
+      // ======= SORT TABLE =======
       function sortTable(col) {
         const tb = q("#tbl tbody");
         const rows = Array.from(tb.rows);
@@ -263,10 +272,9 @@
         rows.forEach((r) => tb.appendChild(r));
       }
 
+      // ======= APPLY FILTER =======
       function applyFilter() {
         const filterVal = q("#statusFilter").value;
-
-        // Save filter to localStorage
         localStorage.setItem("booking_filter", filterVal);
 
         if (filterVal === "all") {
@@ -278,7 +286,7 @@
 
       q("#statusFilter").addEventListener("change", applyFilter);
 
-      // Theme toggle
+      // ======= THEME TOGGLE =======
       const themeToggle = document.getElementById("themeToggle");
       themeToggle.addEventListener("click", function () {
         document.body.classList.toggle("dark");
@@ -301,14 +309,14 @@
         icon.classList.add("fa-sun");
       }
 
-      // Sidebar toggle
+      // ======= SIDEBAR TOGGLE =======
       const menuToggle = document.getElementById("menuToggle");
       const sidebar = document.getElementById("sidebar");
       menuToggle.addEventListener("click", () => {
         sidebar.classList.toggle("active");
       });
 
-      // Load bookings on page load
+      // ======= LOAD & AUTO REFRESH =======
       load();
       setInterval(load, 15000);
     </script>
