--- a/booking.html
+++ b/booking.html
@@ -183,47 +183,17 @@
       let sortDirection = 1;
       const q = (s) => document.querySelector(s);
 
-      // Store current filter value globally to reapply after reload
-      let currentFilter = "all";
-
       async function load() {
-        try {
-          const res = await fetch("/api/bookings");
-          const serverData = await res.json();
+        const res = await fetch("/api/bookings");
+        allData = await res.json();
 
-          // Merge server data into allData preserving local status overrides
-          // This prevents overwriting status changes done locally but not yet fully synced
-          const serverDataMap = new Map(
-            serverData.map((item) => [item.id, item])
-          );
-          allData = allData.map((localItem) => {
-            const serverItem = serverDataMap.get(localItem.id);
-            if (serverItem) {
-              // Preserve local status if changed, otherwise use server status
-              return {
-                ...serverItem,
-                status: localItem.status || serverItem.status || "Still",
-              };
-            }
-            return localItem;
-          });
+        // Add default status if missing
+        allData = allData.map((b) => ({
+          ...b,
+          status: b.status || "Still",
+        }));
 
-          // Add new items from server not in local data
-          serverData.forEach((item) => {
-            if (!allData.some((d) => d.id === item.id)) {
-              // Ensure status fallback
-              allData.push({
-                ...item,
-                status: item.status || "Still",
-              });
-            }
-          });
-        } catch (e) {
-          console.error("Failed to load data:", e);
-        }
-
-        // render with current filter applied
-        applyFilter();
+        renderTable(allData);
       }
 
       async function updateStatus(id, newStatus) {
@@ -275,7 +245,7 @@
           tb.appendChild(r);
         });
 
-        // Attach change event for status dropdowns
+        // Attach change event
         document.querySelectorAll(".status-dropdown").forEach((sel) => {
           sel.addEventListener("change", async (e) => {
             const index = e.target.dataset.index;
@@ -283,8 +253,6 @@
             const newStatus = e.target.value;
 
             allData[index].status = newStatus;
-
-            // Immediately update status in DB and reflect change instantly
             await updateStatus(id, newStatus);
 
             // Show quick save check mark
@@ -292,7 +260,6 @@
             indicator.style.display = "inline";
             setTimeout(() => (indicator.style.display = "none"), 1500);
 
-            // Apply current filter immediately without waiting for reload
             applyFilter();
           });
         });
@@ -312,15 +279,14 @@
       }
 
       function applyFilter() {
-        currentFilter = q("#statusFilter").value;
-        if (currentFilter === "all") {
+        const filterVal = q("#statusFilter").value;
+        if (filterVal === "all") {
           renderTable(allData);
         } else {
-          renderTable(allData.filter((b) => b.status === currentFilter));
+          renderTable(allData.filter((b) => b.status === filterVal));
         }
       }
 
-      // Event to reapply filter on user select
       q("#statusFilter").addEventListener("change", applyFilter);
 
       // Theme toggle
@@ -353,10 +319,8 @@
         sidebar.classList.toggle("active");
       });
 
-      // Load bookings initially
+      // Load bookings on page load
       load();
-
-      // Reload periodically but preserve local changes and filter
       setInterval(load, 15000);
     </script>
   </body>
